--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
 		applicationId "am.newway.lesson4"
 		minSdkVersion 21
 		targetSdkVersion 28
-		versionCode 1
-		versionName "1.0"
+		versionCode 2
+		versionName "1.1"
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 	}
 	buildTypes {
@@ -21,15 +21,18 @@ android {
 
 dependencies {
 	implementation fileTree (dir: 'libs', include: ['*.jar'])
-	implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 	implementation 'com.android.support:appcompat-v7:28.0.0'
 	implementation 'com.android.support:design:28.0.0'
 	implementation 'com.android.support:support-annotations:28.0.0'
 	implementation 'android.arch.lifecycle:extensions:1.1.1'
+	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	testImplementation 'junit:junit:4.12'
 	androidTestImplementation 'com.android.support.test:runner:1.0.2'
 	androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 	
 	implementation 'com.squareup.picasso:picasso:2.71828'
 	implementation 'com.github.bumptech.glide:glide:4.9.0'
+	implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+	implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
+	implementation 'com.google.android.material:material:1.1.0-alpha09'
 }
